--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Tech Talk</a>
+          <a class="navbar-brand" href="#">Its a Techie World</a>
         </div>
         <ul class="nav navbar-nav">
           <li><a href="/">Home</a></li>
