--- a/views/avatar.handlebars
+++ b/views/avatar.handlebars
@@ -1,8 +1,7 @@
-{{!-- select avatar  --}}
 <div class="container">
     <div class="panel panel-default avatar-select">
         <div class="panel-heading">
-            <h4>Select an avatar</h4>
+            <h4>Select Your Avatar</h4>
             <div>
                 <input type="hidden" id="user-id" name="user-id" value={{user.id}} />
             </div>
