--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -23,7 +23,7 @@
 			{{/if}}
 		</div>
 		<div class="col-md-4">
-			<h2>Share A Post</h1>
+			<h2>Share</h1>
 				<div class="well">
 					<form class="post-form" method="POST">
 						<div class="form-group">
