--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 
 <div class="col-md-4 col-md-offset-4">
     <div class="well">
-        <h3>Login</h3>
+        <h3>User Login</h3>
         <form class="login-form">
             <div class="form-group">
                 <label for="user-login"></label>
