--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -13,7 +13,7 @@
                 <div class="form-group">
                     <label for="user-signup"></label>
                     <textarea name="user-bio" id="user-bio" class="form-control" rows="5"
-                        placeholder="Tell us about yourself *"></textarea>
+                        placeholder="All About You! Tell us a little about yourself and passions! *"></textarea>
                 </div>
                 <div class="form-group">
                     <input type="submit" class="btnSubmit" value="Update" />
