--- a/views/avatar.handlebars
+++ b/views/avatar.handlebars
@@ -8,12 +8,12 @@
         </div>
         <div class="panel-body">
             <div class="row text-center">
-                <button><img class="option option-1" src="/img/avatars/icons8-minion-2-150.png" /></button>
-                <button><img class="option option-2" src="/img/avatars/icons8-lisa-simpson-150.png" /></button>
-                <button><img class="option option-3" src="/img/avatars/icons8-patrick-star-150.png" /></button>
-                <button><img class="option option-4" src="/img/avatars/icons8-princess-bubblegum-150.png" /></button>
-                <button><img class="option option-5" src="/img/avatars/icons8-super-mario-150.png" /></button>
-                <button><img class="option option-6" src="/img/avatars/icons8-kermit-the-frog-150.png" /></button>
+                <button><img class="option option-1" src="" /></button>
+                <button><img class="option option-2" src="" /></button>
+                <button><img class="option option-3" src="" /></button>
+                <button><img class="option option-4" src="" /></button>
+                <button><img class="option option-5" src="" /></button>
+                <button><img class="option option-6" src="" /></button>
             </div>
         </div>
     </div>
