--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-6">
-            <h1>Edit Post</h1>
+            <h1>Edit Your Post</h1>
             <form class="edit-form" method="PUT">
                 <div class="form-group">
                     <label for="title">Title <span class="require">*</span></label>
